--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body{
 }
 
 header{
-    background-image: url("bg.jpg");
+    background-image: url("assets/bg.jpg");
     background-repeat: no-repeat;
     background-size:  100% 100%;
 
