--- a/style.css
+++ b/style.css
@@ -14,6 +14,11 @@ header {
     /* background-position-y: center;
     background-position-x: center; */
 }
+h1 {
+    color: #879e0f;
+    /* text-align: center; */
+    font-family: "Bebas Neue", cursive;
+}
 
 h3 {
     /* text-align: center; */
@@ -43,11 +48,7 @@ nav li {
     font-weight: normal;
 }
 
-h1 {
-    color: #879e0f;
-    text-align: center;
-    font-family: "Bebas Neue", cursive;
-}
+
 
 article {
     display: inline-flex
